docs(readme.md): update readme.md doc

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "a open source lib for node.js for get location by city name or iso-3166 or lat,lon or ip, and get location weather",
   "main": "index.js",
   "scripts": {
-    "test": "npm run test"
+    "test": "npm run test",
+    "commit": "git-cz"
   },
   "repository": {
     "type": "git",
@@ -30,4 +31,5 @@
     "geoip-lite": "^1.4.1"
   },
   "homepage": "https://github.com/rainyulei/node_get_location_and_weather#readme"
+  
 }
